xsettings: Reload the scale factor when mutter starts up

We get the scale factor from mutter at start up but mutter might not
be running yet, particularly on X sessions, leaving us with a fallback
value. We should reload when mutter's well known name appears which
also covers the case of a mutter restart.

Based on a patch from Andrea Azzarone <andrea.azzarone@canonical.com>

https://bugzilla.gnome.org/show_bug.cgi?id=788268